--- a/assets/css/colors/default.css
+++ b/assets/css/colors/default.css
@@ -99,7 +99,8 @@ a.link:hover, a.link:focus {
 .sidebar-nav ul li a.active, .sidebar-nav ul li a:hover {
   color: #20aee3; }
   .sidebar-nav ul li a.active i, .sidebar-nav ul li a:hover i {
-    color: #20aee3; }
+    color: #0052cc;}
 
 .sidebar-nav > ul > li > a i {
   color: #787f91; }
+
