--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -1,7 +1,7 @@
 .main_logo{width: 100%;display: block;margin: 30px 0 30px;}
 .login-register{background: #e0c966;}
 
-.form-material .form-control, .form-material .form-control.focus, .form-material .form-control:focus { background-image: linear-gradient( #e0c966, #e0c966), linear-gradient(#e9edf2, #e9edf2); }
+/* .form-material .form-control, .form-material .form-control.focus, .form-material .form-control:focus { background-image: linear-gradient( #e0c966, #e0c966), linear-gradient(#e9edf2, #e9edf2); } */
 
 .btn-info, .btn-info.disabled{background-color: #e0c966;border: 1px solid #e0c966;}
 
