--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2737,14 +2737,14 @@ Form Material page
   padding: 0;
   transition: background 0s ease-out 0s; }
 
-.form-material .form-control,
+/* .form-material .form-control,
 .form-material .form-control.focus,
 .form-material .form-control:focus {
   background-image: linear-gradient(#20aee3, #20aee3), linear-gradient(#e9edf2, #e9edf2);
   border: 0 none;
   border-radius: 0;
   box-shadow: none;
-  float: none; }
+  float: none; } */
 
 .form-material .form-control.focus,
 .form-material .form-control:focus {
