--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4822,6 +4822,65 @@ File: scss
 
 /* Maynard's css */
 
+/* Profile */
+.x_panel {
+    width: 100%;
+    padding: 10px 100px;
+    display: inline-block;
+    background: #fff;
+    border: 1px solid #E6E9ED;
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    column-break-inside: avoid;
+    opacity: 1;
+    transition: all .2s ease;
+    margin: 10px 0px;
+}
+
+.inputpicture + label {
+   font-size: 1.25em;
+   font-weight: 600;
+   color: white;
+   background-color: #2f2e2e;
+   display: inline-block;
+   padding: 10px;
+   border-radius: 5px;
+}
+
+.inputpicture:focus + label,
+.inputpicture + label:hover {
+   background-color: #197bbe;
+}
+
+.inputpicture + label {
+	cursor: pointer; /* "hand" cursor */
+}
+
+.modal-content .modal-header {
+    background-color: #187abe;
+}
+
+.modal-content .modal-title {
+    font-weight: bold;
+    color: white;
+}
+
+#addUserLabel, #editProductLabel {
+    margin: auto;
+}
+
+#view_aname {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#view_adescription {
+  padding: 20px;
+  font-size: 17px;
+  text-align: justify;
+}
+
 .dataTables_wrapper .dataTables_paginate {
     width: 100%;
 }
